--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -36,8 +36,8 @@
           <li><a href="#mozTocId552078">Chapter 2. Base graphics subsystem</a></li>
           <li><a href="#mozTocId289525">Chapter 3. Picture subsystem</a></li>
           <li><a href="#mozTocId501089">Chapter 4. Animation subsystem</a></li>
-          <li><a href="#mozTocId455894"> Chapter 5. Background</a></li>
-          <li><a href="#mozTocId662651"> Chapter 6. Sprites</a></li>
+          <li><a href="#mozTocId455894">Chapter 5. Background</a></li>
+          <li><a href="#mozTocId662651">Chapter 6. Sprites</a></li>
           <li><a href="#mozTocId367464">Chapter 7. Text</a></li>
           <li><a href="#mozTocId146800">Chapter 8. Tile-set</a></li>
           <li><a href="#mozTocId67980">Chapter 9. Loading images</a></li>
@@ -47,10 +47,10 @@
         <ul>
           <li><a href="#mozTocId597525">Chapter 1. The sub-namespace</a></li>
           <li><a href="#mozTocId23432">Chapter 2. Multimedia</a></li>
-          <li><a href="#mozTocId154445">Chapter 5. Random</a></li>
-          <li><a href="#mozTocId853711">Chapter 6. Abnormal program termination</a></li>
-          <li><a href="#mozTocId656377">Chapter 7. Timer</a></li>
-          <li><a href="#mozTocId381935">Chapter 8. Collision</a></li>
+          <li><a href="#mozTocId154445">Chapter 3. Random</a></li>
+          <li><a href="#mozTocId853711">Chapter 4. Abnormal program termination</a></li>
+          <li><a href="#mozTocId656377">Chapter 5. Timer</a></li>
+          <li><a href="#mozTocId381935">Chapter 6. Collision</a></li>
         </ul>
       </li>
       <li><a href="#mozTocId209024">Part 5. Misc</a>
@@ -61,12 +61,12 @@
           <li><a href="#mozTocId573582">Chapter 3. Resource manager</a></li>
         </ul>
       </li>
-      <li><a href="#mozTocId590919"> Part 6. Binary files</a>
+      <li><a href="#mozTocId590919">Part 6. Binary files</a>
         <ul>
           <li><a href="#mozTocId200879">Chapter 1. The sub-namespace</a></li>
-          <li><a href="#mozTocId961921"> Chapter 2. Base binary files subsystem</a></li>
-          <li><a href="#mozTocId424835"> Chapter 3. File reader</a></li>
-          <li><a href="#mozTocId511135"> Chapter 4. File writer</a></li>
+          <li><a href="#mozTocId961921">Chapter 2. Base binary files subsystem</a></li>
+          <li><a href="#mozTocId424835">Chapter 3. File reader</a></li>
+          <li><a href="#mozTocId511135">Chapter 4. File writer</a></li>
         </ul>
       </li>
       <li><a href="#mozTocId291572">Part 7. Input</a>
@@ -1985,6 +1985,7 @@ Multimedia API</a>. </big>
         4.6.5 – Small bug in binary file subsystem fixed.<br>
         4.6.6 – 4.6.8 – Small changes.<br>
         4.6.9 – 4.7 – Changes in the engine API.<br>
+        4.7.0.1 – Documentation updated.<br>
       </big></span>
   </body>
 </html>
