Lot of internal changes

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -376,6 +376,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
+
         href="http://opengl.org">OPENGL</a> for render. Most modern video-card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -407,6 +408,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         unsigned int width,</span></big><big><span style="font-style: italic;">const
         unsigned int heigt</span></big><big><span style="font-style: italic;">);</span>
       – Initialize the base graphic subsystem with custom screen resolution.</big><big><span
+
         style="font-style: italic;"></span><span style="font-style: italic;"></span><br>
       <span style="font-style: italic;">bool Screen::sync();</span> – Show
       current back-buffer content on screen. Return false if a game is
@@ -1720,9 +1722,9 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     <span><big> <span style="font-style: italic;">typedef struct</span></big></span><br
       style="font-style: italic;">
     <span><big> <span style="font-style: italic;">{</span></big></span><br style="font-style: italic;">
-    <span><big> <span style="font-style: italic;">&nbsp;float u;</span></big></span><br
+    &nbsp; <span><big> <span style="font-style: italic;">double u;</span></big></span><br
       style="font-style: italic;">
-    <span><big> <span style="font-style: italic;">&nbsp;float v;</span></big></span><br
+    &nbsp; <span><big> <span style="font-style: italic;">double v;</span></big></span><br
       style="font-style: italic;">
     <span><big> <span style="font-style: italic;">} Point;</span></big></span><br>
     <span></span><span><big> </big> <br>
@@ -1746,6 +1748,7 @@ Multimedia API</a>. </big>
           predefined constants. You can see it bellow.</big></p>
       <big> </big>
       <table style="text-align: left; width: 519px; height: 94px;" cellspacing="2"
+
         cellpadding="2" border="1">
         <tbody>
           <tr>
@@ -1984,6 +1987,8 @@ Multimedia API</a>. </big>
         4.7.1 – 4.7.2 – Small changes.<br>
         4.7.3 – Changes in the engine API.<br>
         4.7.4 – 4.8 – Small changes.<br>
+        4.8.1 – 4.8.3 – Render improved.<br>
+        4.8.4 – 4.8.6 – Small changes.<br>
       </big></span>
   </body>
 </html>
