Keyboard input improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1989,6 +1989,7 @@ Multimedia API</a>. </big>
         4.7.4 – 4.8 – Small changes.<br>
         4.8.1 – 4.8.3 – Render improved.<br>
         4.8.4 – 4.8.6 – Small changes.<br>
+        4.8.7 – Keyboard input improved.<br>
       </big></span>
   </body>
 </html>
