Display manager improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1990,8 +1990,9 @@ Multimedia API</a>. </big>
         4.8.1 – 4.8.3 – Render improved.<br>
         4.8.4 – 4.8.6 – Small changes.<br>
         4.8.7 – Keyboard input improved.<br>
-        4.8.8 – 4.8.9 – Display manadger improved.<br>
+        4.8.8 – 4.8.9 – Display manager improved.<br>
         4.9 – 4.9.1 – Small changes.<br>
+        4.9.2 – Display manager improved.<br>
       </big></span>
   </body>
 </html>
