--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1994,6 +1994,9 @@ Multimedia API</a>. </big>
         4.9 – 4.9.1 – Small changes.<br>
         4.9.2 – Display manager improved.<br>
         4.9.3 – 4.9.4 – Small changes.<br>
+        4.9.5 – Keyboard input improved.<br>
+        4.9.6 – Mouse input improved.<br>
+        4.9.7 – 4.9.8 – Small changes.<br>
       </big></span>
   </body>
 </html>
